--- a/src/App.css
+++ b/src/App.css
@@ -3,4 +3,8 @@ padding: 0;
 margin: 0;
 height: 100%;
 background-color: #000;
+display: flex;
+justify-content: center;
+align-items: center;
+font-family: sans-serif; 
 }
