--- a/src/components/Recipe.css
+++ b/src/components/Recipe.css
@@ -1,10 +1,24 @@
 .recipe{
-    margin-top: 50px;
-    width: 25rem;
-    text-align: center;
     padding: 30px 30px 12px 30px;
     color: #000;
     background-color: rgba(240, 235, 235, 0.3);
     border: 6px solid #00ADB5;
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  img {
+    padding:50px;
+    height: 200px;
+    width: 200px;
+  }
+
+  button {
+    padding: 10px;
+    font-size: 15px;
+    background-color: yellow;
+    border-radius: 50px;
   }
