--- a/src/components/Recipe.css
+++ b/src/components/Recipe.css
@@ -1,4 +1,5 @@
 .recipe{
+    margin: 50px;
     padding: 30px 30px 12px 30px;
     color: #000;
     background-color: rgba(240, 235, 235, 0.3);
@@ -12,13 +13,46 @@
 
   img {
     padding:50px;
-    height: 200px;
-    width: 200px;
+    height: 300px;
+    width: 300px;
   }
 
-  button {
-    padding: 10px;
-    font-size: 15px;
-    background-color: yellow;
-    border-radius: 50px;
+  #input-section {
+    display:flex;
+    justify-content: center;
   }
+
+  input {
+    display: flex;
+    width: 50%;
+    position: relative;
+    align-items: center;
+}
+
+.input_box {
+    width: 100;
+    border-radius: 50px;
+    padding: 20px 30px;
+    font-size: 25px;
+    border: none;
+    transition: 0.2s;
+    box-shadow: inset 0 0 5px black;
+}
+
+.input_box:focus {
+    box-shadow: 0 0 10px 1000px rgba(0,0,0,0.5);
+    outline: none
+}
+
+.input_submit {
+    width:50px;
+    height: 50px;
+    margin: 12px;
+    border-radius: 50px;
+    border: none;
+    font-size: 15px;
+    background-color: aqua;
+    color: black;
+    transition: 0.2s all;
+    box-shadow: 0 0 10px black;
+}
