--- a/src/components/Recipe.css
+++ b/src/components/Recipe.css
@@ -56,3 +56,9 @@
     transition: 0.2s all;
     box-shadow: 0 0 10px black;
 }
+
+h1 {
+    color: aqua;
+    text-shadow: 1px 2px 2px black;
+    font-size: 30px;
+}
