--- a/src/components/Recipe.css
+++ b/src/components/Recipe.css
@@ -62,3 +62,12 @@ h1 {
     text-shadow: 1px 2px 2px black;
     font-size: 30px;
 }
+
+.instructions {
+    margin: 20px 0px 20px 0px;
+    padding: 30px 30px 12px 30px;
+    color: #000;
+    background-color: rgba(240, 235, 235, 0.3);
+    border: 6px solid #00ADB5;
+    border-radius: 5px;
+}
