--- a/src/components/Recipe.css
+++ b/src/components/Recipe.css
@@ -17,38 +17,8 @@
     width: 300px;
   }
 
-  #input-section {
-    display:flex;
-    justify-content: center;
-  }
-
-  input {
-    display: flex;
-    width: 50%;
-    position: relative;
-    align-items: center;
-}
-
-.input_box {
-    width: 100;
-    border-radius: 50px;
-    padding: 20px 30px;
-    font-size: 25px;
-    border: none;
-    transition: 0.2s;
-    box-shadow: inset 0 0 5px black;
-}
-
-.input_box:focus {
-    box-shadow: 0 0 10px 1000px rgba(0,0,0,0.5);
-    outline: none
-}
-
 .input_submit {
-    width:50px;
-    height: 50px;
-    margin: 12px;
-    border-radius: 50px;
+    padding: 10px;
     border: none;
     font-size: 15px;
     background-color: aqua;
@@ -71,3 +41,21 @@ h1 {
     border: 6px solid #00ADB5;
     border-radius: 5px;
 }
+
+#para {
+    font-size: 20px;
+    color: aqua;
+    text-shadow: 1px 2px 2px black;
+}
+
+ul{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+
+  li{
+    color: aqua;
+    padding: 15px 0;
+    font-size: 18px; 
+  }
